# firmware_practice_exercises

./: README.md  what_u_want.txt
exercise_1/: README.md
exercise_1/exercise_1/: CMakeLists.txt  arm_assembly_quick_guide.md  notes_exercise_1.txt  notes_exercise_1_backup.txt  notes_exercise_1_rewrite_request.txt
exercise_1/exercise_1/boards/stm32f4disco/: linker.ld
exercise_1/exercise_1/cmake/: arm-none-eabi.cmake
exercise_1/exercise_1/include/: stm32f4xx_min.h
exercise_1/exercise_1/scripts/: run-stm32f4.resc
exercise_1/exercise_1/src/: main.c  startup_stm32f407xx.s  system_stm32f4xx.c
